# src/main/kotlin/com/example/todo/api/mappers/TodoContractMapper.kt
@@ -1,4 +1,4 @@
-package com.example.todolist.api.mappers
+package com.example.todo.api.mappers
 
 import com.example.core.api.mappers.PaginationContractMapper
 import com.example.core.domain.Page
@@ -22,6 +22,7 @@ object TodoContractMapper {
 
     fun toContract(todo: Todo) = TodoResponseContract(
         id = todo.id.toString(),
+        todoListId = todo.todoListId.toString(),
         name = todo.name,
         completed = todo.completedAt != null,
         completedAt = todo.completedAt,
